fix: horizontal scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,13 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
+    width: 100%;
   }
+}
+
+html {
+  overflow-x: hidden;
 }
 
 .primary-color {
